--- a/css/main.css
+++ b/css/main.css
@@ -62,10 +62,14 @@ body.overlay {
   margin-top: -5px;
 }
 
+.image-icon {
+	display: none;
+}
+
 header {
 	color: grey;
 	font-family: 'Anton', sans-serif;
-	overflow: hidden;
+  /* overflow: hidden */
   border-bottom: 1px solid #ccc;
 }
 
@@ -358,6 +362,10 @@ ul {
   margin: 30px auto;
 }
 
+.bkg-header {
+	background-size: cover !important; /* do it's best to fill in the element with the background image */
+}
+
 	#about {
 	background: url('../images/woodworking_unsplash_2.jpg')center;
 	/* Photo by Keith Misner on Unsplash */
@@ -399,12 +407,42 @@ footer p {
 
 /* SMALL (sm) devices (tablets, 768px and up) */
 @media (min-width: 768px) {
+	/* logo */
+
+	.logo-icon {
+		display: block;
+		background: white;
+		padding: 5px;
+		border-radius: 5px;
+		overflow: hidden;
+		width: 110px;
+		position: absolute;
+		z-index: 9999;
+		border: 2px solid #616161;
+		/* box-shadow: 0 0 5px 1px #222222; */
+		margin-top: 4px;
+	}
+
+
+	.logo-icon a {
+		display: block;
+		width: 110px;
+		height: 75px;
+		position: relative;
+	}
+
+	.logo-icon a img {
+		width: 100%;
+		height: auto;
+		margin: -2px 0 0 -7px;
+	}
+	
 	nav {
 		width: 50%;
 	}
 
   header h1 {
-    margin-left: 4rem;
+    margin-left: 13rem;
   	margin-top: 15px;
   	font-size: 2.5rem;
   }
@@ -433,7 +471,7 @@ footer p {
 	}
 
 	.logo {
-		width: 35%;
+		width: 40%;
 	}
 
 	nav {
@@ -441,7 +479,7 @@ footer p {
 		opacity: 1;
 		height: auto;
 		background-color: transparent;
-		width: 65%;
+		width: 59%;
 	}
 
 	nav ul {
@@ -521,5 +559,139 @@ footer p {
   .slideshow .caption p:first-child {
     font-size: 5rem;
     font-weight: 900;
+  }
+}
+
+
+
+/* timeline
+--------------------- */
+.timeline-section {
+    background-color: #ccc;
+    font-family: Helvetica, sans-serif;
+}
+
+/* The actual timeline (the vertical ruler) */
+.timeline {
+    position: relative;
+    max-width: 1200px;
+    margin: 10rem auto 0 auto;
+}
+
+/* The actual timeline (the vertical ruler) */
+.timeline::after {
+    content: '';
+    position: absolute;
+    width: 6px;
+    background-color: white;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
+}
+
+/* Container around content */
+.container-timeline {
+    padding: 10px 40px;
+    position: relative;
+    background-color: inherit;
+    width: 50%;
+}
+
+/* The circles on the timeline */
+.container-timeline::after {
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    right: -12px;
+    background-color: white;
+    border: 4px solid #FF9F55;
+    top: 15px;
+    border-radius: 50%;
+    z-index: 1;
+}
+
+/* Place the container to the left */
+.left {
+    left: 0;
+}
+
+/* Place the container to the right */
+.right {
+    left: 50%;
+}
+
+/* Add arrows to the left container (pointing right) */
+.left::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    right: 30px;
+    border: medium solid white;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent transparent transparent white;
+}
+
+/* Add arrows to the right container (pointing left) */
+.right::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    left: 30px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+}
+
+/* Fix the circle for containers on the right side */
+.right::after {
+    left: -16px;
+}
+
+/* The actual content */
+.content {
+    padding: 20px 30px;
+    background-color: white;
+    position: relative;
+    border-radius: 6px;
+}
+
+/* Media queries - Responsive timeline on screens less than 600px wide */
+@media screen and (max-width: 600px) {
+  /* Place the timelime to the left */
+  .timeline::after {
+    left: 31px;
+  }
+
+  /* Full-width containers */
+  .container-timeline {
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
+  }
+
+  /* Make sure that all arrows are pointing leftwards */
+  .container-timeline::before {
+    left: 60px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+  }
+
+  /* Make sure all circles are at the same spot */
+  .left::after, .right::after {
+    left: 15px;
+  }
+
+  /* Make all right containers behave like the left ones */
+  .right {
+    left: 0%;
   }
 }
